--- a/style.css
+++ b/style.css
@@ -153,3 +153,76 @@ h5{
         font-size: 50%;
     }
 }
+
+@media (max-width: 540px) {
+    nav {
+        display: none;
+    }
+
+    .one,
+    .two,
+    .three {
+        background-color: #fff;
+        height: 5px;
+        width: 100%;
+        margin: 6px auto;
+
+        transition-duration: 0.3s;
+    }
+
+    .menu-toggle {
+        width: 40px;
+        height: 30px;
+        margin-right: 20px;
+    }
+
+    /* fullscreen */
+    .menu-section.on {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #2c3e50;
+
+        width: 100vw;
+        height: 100vh;
+
+        z-index: 10;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .menu-section.on nav {
+        display: block;
+    }
+
+    .menu-section.on .menu-toggle {
+        position: absolute;
+        right: 10px;
+        top: 5px;
+    }
+    .menu-section.on .menu-toggle .one {
+        transform: rotate(45deg) translate(7px, 7px);
+    }
+
+    .menu-section.on .menu-toggle .two {
+        opacity: 0;
+    }
+
+    .menu-section.on .menu-toggle .three {
+        transform: rotate(-45deg) translate(8px, -9px);
+    }
+    .menu-section.on nav ul {
+        text-align: center;
+        display: block;
+    }
+    
+    .menu-section.on nav ul a {
+        transition-duration: 0.5s;
+        font-size: 2.5rem;
+        line-height: 3rem;
+        display: block;
+    }
+}
+
